dump command has been added.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS=ezcalc
 ezcalc_SOURCES=main.cc parse.yy scan.ll
-ezcalc_LDADD=-lezvm -lfl
+ezcalc_LDADD=-lezvm
 AM_CPPFLAGS=-I../../include -std=c++11
 BUILT_SOURCES=parse.hh
 AM_YFLAGS=-d --warning=all
